--- a/course-app/src/components/page-not-found/page-not-found.styles.css
+++ b/course-app/src/components/page-not-found/page-not-found.styles.css
@@ -1,13 +1,13 @@
 .error-page{
     margin-top: 20px;
-    background-color: rgb(224, 0, 0);
     align-items: center;
-    background-size: cover;
     height: 35rem;
     background-image: url('../../assets/error-404.png');
+    background-size:contain;
+    background-repeat: no-repeat;
 }
 .error-page-button{
-    margin: 27%;
+    margin: 30%;
     width: 300px;
     height: 40px;
     color: black;
@@ -20,3 +20,4 @@
     font-size: 40px;
     margin-left: 20%;
 }
+
